# Safe-Exploration-with-Simulator-in-RL-algorithms

./: .gitlab-ci.yml  CMakeLists.txt  Makefile  Makefile.environment  Makefile.experiment  README.md  SwimmerAgent.py  SwimmerEnvironment.cpp  SwimmerEnvironment.h  SwimmerExperiment.cpp  TestComputeAcceleration.cpp  TestUpdateState.cpp  parameters.txt
ars/: README.md  ars_agent.py  comparison_mujoco.py  database.py  environment.py  estimator.py  experiment.py  parameters.py  plot_graph.py  safe_exploration.py  state_range.py
cacla/: README.md  cacla_agent.py  cacla_safe_agent.py  experiment.py  lqr_experiment.py  mujoco_experiment.py  safe_exploration_lqr.py  swimmer_experiment.py  window.py
envs/: README.md
envs/gym_lqr/: lqr_env.py
envs/gym_swimmer/: README.md  register.py
gym-swimmer/: setup.py
gym-swimmer/ADDME/: register.py
gym-swimmer/gym_swimmer/: __init__.py
gym-swimmer/swimmer/: remy_swimmer_env.py
results/estimation/: example.txt
results/rlglue/: show_results.py
rlglue/: Makefile  README.md  parameters.txt
rlglue/Eigen/: README.md
rlglue/environment/: Makefile.environment  SwimmerEnvironment.cpp
rlglue/experiment/: Makefile.experiment  SwimmerExperiment.cpp
rlglue/plot/: results.txt  show_results.py
rlglue/test/: CMakeLists.txt  TestUpdateState.cpp  acceleration-compare.txt  mujoco-list.py  mujoco-list.txt
safe_ars/: README.md  ars.py  experiment.py
src/: parameters.txt
test/: CMakeLists.txt  TestComputeAcceleration.cpp  TestEuler.cpp  TestUpdateState.cpp  acceleration-compare.txt  mujoco-list.py  swimmer-compare.txt
(+31 files in other folders)
